--- a/SistemaVendas/nbproject/project.properties
+++ b/SistemaVendas/nbproject/project.properties
@@ -34,12 +34,14 @@ dist.jar=${dist.dir}/SistemaVendas.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mssql-jdbc-9.2.1.jre8.jar=C:\\Program Files (x86)\\Java\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre8.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.mssql-jdbc-9.2.1.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
